Fix #95 Improve Javadoc.